# architecture-pattern

./: .gitignore  .pre-commit-config.yaml  .python-version  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
abstraction/: sync_1.py  sync_2.py  test_sync_1.py  test_sync_2.py
app/: api.py  config.py  database.py  main.py  models.py  orm.py  repository.py  schema.py  services.py
app/adapters/: orm.py  repository.py
app/domain/: models.py
app/service/: services.py  unit_of_work.py
scripts/: start-dev.sh  test.sh
tests/: conftest.py  test_allocate.py  test_api.py  test_batches.py  test_orm.py  test_repository.py
tests/e2e/: test_api.py
tests/integration/: test_orm.py  test_repository.py  test_uow.py
tests/unit/: test_allocate.py  test_batches.py  test_services.py
