[tool.poetry]
name = "architecture-pattern"
version = "0.1.0"
description = ""
authors = ["kmlee78 <jaoming787@gmail.com>"]
readme = "README.md"
packages = [{include = "architecture_pattern"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.89.1"
sqlalchemy = "^1.4.46"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"
isort = "^5.11.4"
ruff = "^0.0.222"
mypy = "^0.991"
pre-commit = "^2.21.0"
pytest-asyncio = "^0.20.3"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend-ignore = ["I001"]
line-length = 100
fix = true


[tool.isort]
profile = "black"
line_length = 100

[tool.black]
line-length = 100
experimental-string-processing = true

[tool.mypy]
python_version = "3.10" 
ignore_missing_imports = true 
disallow_any_generics = true 
disallow_untyped_calls= true 
disallow_untyped_defs= true 
disallow_incomplete_defs = true 
disallow_untyped_decorators = true 
check_untyped_defs = true 
strict_optional = false 
warn_redundant_casts = true 
warn_unused_ignores = true 
allow_redefinition = true 
show_column_numbers = true 
pretty = true 